Reconfigure for official Slack Add-on compatibility
- Updated alert_actions.conf with official Slack app parameters
- Added is_custom=1, python.version=python3, payload_format=json
- Added param.attachment=none for plain text messages
- Added param.from_user and param.from_user_icon
- Copied official Slack handler files (slack.py, safe_fmt.py, six.py)
- Updated all 15 alerts with action.slack.param.attachment=none
- Updated README with official Slack configuration guide
- No separate app installation required

--- a/security_alert/default/alert_actions.conf
+++ b/security_alert/default/alert_actions.conf
@@ -1,15 +1,19 @@
 [slack]
 is_custom = 1
-label = Send to Slack (Block Kit)
-description = Send formatted alert to Slack using Block Kit
-icon_path = appIcon.png
-payload_format = json
+label = Slack
+description = Send a message to a Slack channel
+icon_path = slack.png
 python.version = python3
+payload_format = json
 
-param.slack_app_oauth_token =
+# Slack webhook URL (configure in local/alert_actions.conf)
 param.webhook_url =
-param.proxy_enabled = 0
-param.proxy_url =
-param.proxy_port =
-param.proxy_username =
-param.proxy_password =
+
+# Message configuration
+param.from_user = Splunk Security Alert
+param.from_user_icon = https://s3-us-west-1.amazonaws.com/ziegfried-apps/slack-alerts/splunk-icon.png
+param.attachment = none
+param.message =
+
+# Optional proxy settings
+param.http_proxy =
