--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -64,6 +64,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -122,6 +123,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -168,6 +170,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -225,6 +228,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -283,6 +287,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -337,6 +342,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -385,6 +391,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -433,6 +440,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -489,6 +497,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -540,6 +549,7 @@ alert.expires = 12h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -589,6 +599,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -648,6 +659,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -709,6 +721,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -758,6 +771,7 @@ alert.expires = 24h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
@@ -816,6 +830,7 @@ alert.expires = 48h
 
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
+action.slack.param.attachment = none
 action.slack.param.message = $result.formatted_message$
 
 dispatch.rt_backfill = 1
