Add alert_title field to all 15 alerts
- Added eval alert_title with emoji icons and context
- Title includes alert type + key identifier (component/device/interface/vpn_name/etc)
- Updated all table commands to include _time as first field
- alert_title appears after formatted_message in fields list
- Slack message param uses $result.alert_title$
- Slack fields param includes device, formatted_message, criticality/severity
- Title examples:
  * 🔧 Config Change: CLI
  * ⚠️ Hardware Failure: PSU1
  * ✅ VPN Tunnel Up: remote-branch
  * 🚨 SSL VPN Attack: fw01

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -47,7 +47,8 @@ search = `fortigate_index` `logids_config_change` \
     true(), "🟢 LOW") \
 | eval short_path = if(len(config_path) > 50, "..." . substr(config_path, len(config_path)-47, 50), config_path) \
 | eval formatted_message = change_type . " | " . short_path . " | " . change_summary \
-| table _time, device, user, method, formatted_message, criticality
+| eval alert_title = "🔧 Config Change: " . change_type \
+| table _time, device, user, method, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -108,7 +109,8 @@ search = `fortigate_index` `logids_hardware_failure` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t hardware_state_tracker \
-| table last_seen, device, formatted_message, severity
+| eval alert_title = "⚠️ Hardware Failure: " . component \
+| table _time, last_seen, device, formatted_message, severity, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -155,7 +157,8 @@ search = `fortigate_index` (logid=0103040014 OR logid=0103040015) \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t hardware_state_tracker \
-| table last_seen, device, formatted_message
+| eval alert_title = "✅ Hardware Restored: " . component \
+| table _time, last_seen, device, formatted_message, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -213,7 +216,8 @@ search = `fortigate_index` `logids_ha_state` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t ha_state_tracker \
-| table last_seen, device, formatted_message, criticality
+| eval alert_title = "🔄 HA State Change: " . device \
+| table _time, last_seen, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -272,7 +276,8 @@ search = `fortigate_index` `logids_resource_limit` \
 | eval state = current_state \
 | outputlookup append=t resource_state_tracker \
 | where current_state="EXCEEDED" \
-| table _time, device, formatted_message, severity
+| eval alert_title = "📊 Resource Limit: " . resource_type \
+| table _time, device, formatted_message, severity, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -327,7 +332,8 @@ search = `fortigate_index` `logids_admin_login` \
 | eval state = current_state \
 | outputlookup append=t admin_login_state_tracker \
 | where current_state="ATTACK" \
-| table first_time, device, formatted_message
+| eval alert_title = "🚨 Admin Login Attack: " . device \
+| table _time, firstdevice, formatted_message, alert_title
 
 cron_schedule = * * * * *
 enableSched = 0
@@ -376,7 +382,8 @@ search = `fortigate_index` `logids_link_monitor` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t interface_state_tracker \
-| table last_seen, device, formatted_message
+| eval alert_title = "⚠️ Interface Down: " . interface \
+| table _time, last_seen, device, formatted_message, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -425,7 +432,8 @@ search = `fortigate_index` `logids_link_monitor` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t interface_state_tracker \
-| table last_seen, device, formatted_message
+| eval alert_title = "✅ Interface Up: " . interface \
+| table _time, last_seen, device, formatted_message, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -482,7 +490,8 @@ search = `fortigate_index` `logids_vpn_tunnel` \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t vpn_state_tracker \
-| table last_seen, device, formatted_message, criticality
+| eval alert_title = "⚠️ VPN Tunnel Down: " . clean_vpn_name \
+| table _time, last_seen, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -534,7 +543,8 @@ search = `fortigate_index` (logid=0101037125 OR logid=0101037132) \
 | where state_changed=1 \
 | eval state = current_state \
 | outputlookup append=t vpn_state_tracker \
-| table last_seen, device, formatted_message, criticality
+| eval alert_title = "✅ VPN Tunnel Up: " . clean_vpn_name \
+| table _time, last_seen, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -584,7 +594,8 @@ search = `fortigate_index` `logids_cpu_memory` \
 | eval state = current_state \
 | outputlookup append=t cpu_memory_state_tracker \
 | where current_state="ABNORMAL" \
-| table last_seen, device, formatted_message, criticality
+| eval alert_title = "📈 CPU/Memory Anomaly: " . resource \
+| table _time, last_seen, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -644,7 +655,8 @@ search = `fortigate_index` `logids_ssl_vpn_failed` earliest=rt-10m latest=rt \
 | eval state = current_state \
 | outputlookup append=t vpn_brute_force_state_tracker \
 | where current_state="ATTACK" \
-| table first_seen, device, formatted_message, criticality
+| eval alert_title = "🚨 SSL VPN Attack: " . device \
+| table _time, first_seen, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 0
@@ -706,7 +718,8 @@ search = `fortigate_index` `logids_traffic` earliest=rt-35m latest=rt \
 | eval state = current_state \
 | outputlookup append=t traffic_spike_state_tracker \
 | where current_state="SPIKE" \
-| table last_seen, device, formatted_message, severity
+| eval alert_title = "📈 Traffic Spike: " . device \
+| table _time, last_seen, device, formatted_message, severity, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -754,7 +767,8 @@ search = `fortigate_index` `logids_system_reboot` earliest=rt-10m latest=rt \
 | eval uptime_before = coalesce(uptime, "N/A") \
 | eval clean_reason = if(len(reboot_reason) > 50, substr(reboot_reason, 1, 47) + "...", reboot_reason) \
 | eval formatted_message = reboot_type . " " . event_type . " | Initiated by: " . initiated_by . " | Reason: " . clean_reason . " | Uptime: " . uptime_before \
-| table _time, device, formatted_message, criticality
+| eval alert_title = "🔄 System Reboot: " . device \
+| table _time, device, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -815,7 +829,8 @@ search = `fortigate_index` `logids_license_warning` \
 | eval state = current_state \
 | outputlookup append=t license_state_tracker \
 | where current_state="WARNING" \
-| table last_seen, device, formatted_message, urgency
+| eval alert_title = "⚠️ License Expiring: " . license_category \
+| table _time, last_seen, device, formatted_message, urgency, alert_title
 
 cron_schedule = */5 * * * *
 enableSched = 0
