Define action.slack.param.fields for all 15 alerts
- Message parameter: alert_title only (title with emoji)
- Fields parameter: device, formatted_message, criticality, etc.
- Each alert has customized fields based on table output
- Ensures clean Slack message structure: title in message, details in fields

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -66,7 +66,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = device,user,method,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -126,7 +127,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,severity
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -174,7 +176,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -233,7 +236,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -293,7 +297,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = device,formatted_message,severity
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -349,7 +354,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = firstdevice,formatted_message
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -399,7 +405,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -449,7 +456,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -507,7 +515,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -560,7 +569,8 @@ alert.expires = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -611,7 +621,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -672,7 +683,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = first_seen,device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -735,7 +747,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,severity
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -786,7 +799,8 @@ alert.expires = 24h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = device,formatted_message,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -846,7 +860,8 @@ alert.expires = 48h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
-action.slack.param.message = $result.formatted_message$
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = last_seen,device,formatted_message,urgency
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
