Clean unnecessary info and enhance Config Change alert
Changes:
- Added UUID removal to all 15 alerts' formatted_message fields
- Filter out UUID-only changes in Config Change alert
- Added before_value and after_value fields for clear change tracking
- Updated Slack fields: device, user, method, config_path, before_value, after_value, criticality
- Added whitespace cleanup (multiple spaces → single space)
- Ensures only meaningful configuration changes trigger alerts

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -47,8 +47,15 @@ search = `fortigate_index` `logids_config_change` \
     true(), "🟢 LOW") \
 | eval short_path = if(len(config_path) > 50, "..." . substr(config_path, len(config_path)-47, 50), config_path) \
 | eval formatted_message = change_type . " | " . short_path . " | " . change_summary \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message) \
+| eval before_value = if(clean_before != "-" AND clean_before != "[UUID]", clean_before, "N/A") \
+| eval after_value = if(clean_after != "[UUID]", clean_after, "N/A") \
+| eval is_uuid_only_change = if(before_value == "N/A" AND after_value == "N/A", 1, 0) \
+| where is_uuid_only_change = 0 \
 | eval alert_title = "🔧 Config Change: " . change_type \
-| table _time, device, user, method, formatted_message, criticality, alert_title
+| table _time, device, user, method, before_value, after_value, config_path, formatted_message, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -67,7 +74,7 @@ action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
 action.slack.param.message = $result.alert_title$
-action.slack.param.fields = device,user,method,formatted_message,criticality
+action.slack.param.fields = device,user,method,config_path,before_value,after_value,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
@@ -98,7 +105,10 @@ search = `fortigate_index` `logids_hardware_failure` \
     temp_value != "-", "Temp: " . temp_value . "°C", \
     threshold != "-", "Usage: " . threshold . "%", \
     true(), "") \
-| eval formatted_message = component . " " . component_detail . " | Status: FAILED" . if(status_info != "", " | " . status_info, "") \
+| eval formatted_message = component . " " . component_detail . " | Status: FAILED" . if(status_info != "", " | " . status_info, "") \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "FAIL" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(severity) as severity, latest(current_state) as current_state \
@@ -147,7 +157,10 @@ search = `fortigate_index` (logid=0103040014 OR logid=0103040015) \
     true(), "Hardware") \
 | rex field=msg "(?i)(?<component_detail>fan\s*\d+|psu\s*\d+|sensor\s*\d+)" \
 | eval component_detail = upper(coalesce(component_detail, "-")) \
-| eval formatted_message = component . " " . component_detail . " | Status: RESTORED" \
+| eval formatted_message = component . " " . component_detail . " | Status: RESTORED" \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "OK" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(current_state) as current_state \
@@ -207,7 +220,10 @@ search = `fortigate_index` `logids_ha_state` \
 | rex field=msg "reason:\s*(?<reason>[^,\.]+)" \
 | eval reason = coalesce(reason, "-") \
 | eval clean_reason = if(len(reason) > 50, substr(reason, 1, 47) + "...", reason) \
-| eval formatted_message = role . " | Transition: " . transition . " | Member: " . clean_member . " | Reason: " . clean_reason \
+| eval formatted_message = role . " | Transition: " . transition . " | Member: " . clean_member . " | Reason: " . clean_reason \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = ha_state \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(criticality) as criticality, latest(current_state) as current_state \
@@ -267,7 +283,10 @@ search = `fortigate_index` `logids_resource_limit` \
     usage_pct >= 75, "🟡 MEDIUM", \
     true(), "🟢 LOW") \
 | eval remaining = if(isnum(limit_value) AND isnum(current_value), (tonumber(limit_value) - tonumber(current_value)), "-") \
-| eval formatted_message = resource_type . " | Usage: " . usage . if(remaining != "-", " | Remaining: " . remaining, "") \
+| eval formatted_message = resource_type . " | Usage: " . usage . if(remaining != "-", " | Remaining: " . remaining, "") \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = if(usage_pct >= 75, "EXCEEDED", "NORMAL") \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(severity) as severity, latest(current_state) as current_state \
@@ -324,7 +343,10 @@ search = `fortigate_index` `logids_admin_login` \
 | eval unique_users = mvcount(users) \
 | eval clean_ip = if(len(source_ip) > 45, substr(source_ip, 1, 42) + "...", source_ip) \
 | eval user_list = if(unique_users > 3, mvindex(users, 0, 2) . "...", mvjoin(users, ", ")) \
-| eval formatted_message = attack_type . " from " . clean_ip . " | Users: " . user_list . " | " . fail_count . " failures in " . duration \
+| eval formatted_message = attack_type . " from " . clean_ip . " | Users: " . user_list . " | " . fail_count . " failures in " . duration \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = if(fail_count >= 3, "ATTACK", "NORMAL") \
 | stats latest(first_time) as first_time, latest(formatted_message) as formatted_message, \
         latest(current_state) as current_state \
@@ -376,7 +398,10 @@ search = `fortigate_index` `logids_link_monitor` \
 | eval link_speed = coalesce(link_speed, "-") . "Mbps" \
 | eval duplex = coalesce(duplex, "-") \
 | eval link_info = if(link_speed != "-Mbps", link_speed . "/" . duplex, "") \
-| eval formatted_message = if_type . " Interface: " . interface . " | Status: DOWN" . if(link_info != "", " | " . link_info, "") \
+| eval formatted_message = if_type . " Interface: " . interface . " | Status: DOWN" . if(link_info != "", " | " . link_info, "") \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "DOWN" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(current_state) as current_state \
@@ -427,7 +452,10 @@ search = `fortigate_index` `logids_link_monitor` \
 | eval link_speed = coalesce(link_speed, "-") . "Mbps" \
 | eval duplex = coalesce(duplex, "-") \
 | eval link_info = if(link_speed != "-Mbps", link_speed . "/" . duplex, "") \
-| eval formatted_message = if_type . " Interface: " . interface . " | Status: UP" . if(link_info != "", " | " . link_info, "") \
+| eval formatted_message = if_type . " Interface: " . interface . " | Status: UP" . if(link_info != "", " | " . link_info, "") \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "UP" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(current_state) as current_state \
@@ -486,7 +514,10 @@ search = `fortigate_index` `logids_vpn_tunnel` \
     true(), "VPN") \
 | eval criticality = if(event="Tunnel Down", "🔴 CRITICAL", "🟠 HIGH") \
 | eval clean_vpn_name = if(len(vpn_name) > 40, substr(vpn_name, 1, 37) + "...", vpn_name) \
-| eval formatted_message = vpn_type . ": " . clean_vpn_name . " | " . event . " | Remote: " . remote_ip . " | Reason: " . failure_reason \
+| eval formatted_message = vpn_type . ": " . clean_vpn_name . " | " . event . " | Remote: " . remote_ip . " | Reason: " . failure_reason \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "DOWN" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(criticality) as criticality, latest(current_state) as current_state \
@@ -540,7 +571,10 @@ search = `fortigate_index` (logid=0101037125 OR logid=0101037132) \
     true(), "VPN") \
 | eval criticality = "🟢 INFO" \
 | eval clean_vpn_name = if(len(vpn_name) > 40, substr(vpn_name, 1, 37) + "...", vpn_name) \
-| eval formatted_message = vpn_type . ": " . clean_vpn_name . " | " . event . " | Remote: " . remote_ip \
+| eval formatted_message = vpn_type . ": " . clean_vpn_name . " | " . event . " | Remote: " . remote_ip \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval current_state = "UP" \
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(criticality) as criticality, latest(current_state) as current_state \
@@ -592,7 +626,10 @@ search = `fortigate_index` `logids_cpu_memory` \
 | eval deviation_pct = round(((current_value - baseline_avg) / baseline_avg) * 100, 1) \
 | eval current_state = if(deviation_pct > 20, "ABNORMAL", "NORMAL") \
 | eval criticality = if(current_state="ABNORMAL", "🟠 WARNING", "🟢 NORMAL") \
-| eval formatted_message = resource . " Usage Spike | Current: " . current_value . "% (Baseline: " . baseline_avg . "%) | +" . deviation_pct . "% deviation" \
+| eval formatted_message = resource . " Usage Spike | Current: " . current_value . "% (Baseline: " . baseline_avg . "%) | +" . deviation_pct . "% deviation" \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(criticality) as criticality, latest(current_state) as current_state \
   by device, resource \
@@ -654,7 +691,10 @@ search = `fortigate_index` `logids_ssl_vpn_failed` earliest=rt-10m latest=rt \
 | eval current_state = if(fail_count >= 5, "ATTACK", "NORMAL") \
 | eval clean_ip = if(len(source_ip) > 45, substr(source_ip, 1, 42) + "...", source_ip) \
 | eval user_list = if(unique_users > 3, mvindex(attempted_users, 0, 2) . " +more", mvjoin(attempted_users, ", ")) \
-| eval formatted_message = attack_type . " from " . clean_ip . " | " . fail_count . " failures | Users: " . user_list . " | Duration: " . duration \
+| eval formatted_message = attack_type . " from " . clean_ip . " | " . fail_count . " failures | Users: " . user_list . " | Duration: " . duration \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | stats latest(first_seen) as first_seen, latest(formatted_message) as formatted_message, \
         latest(criticality) as criticality, latest(current_state) as current_state \
   by device, source_ip \
@@ -718,7 +758,10 @@ search = `fortigate_index` `logids_traffic` earliest=rt-35m latest=rt \
     true(), "Normal Traffic") \
 | eval current_state = if(spike_multiplier >= 3, "SPIKE", "NORMAL") \
 | eval clean_ip = if(len(source_ip) > 45, substr(source_ip, 1, 42) + "...", source_ip) \
-| eval formatted_message = anomaly_type . " from " . clean_ip . " | Current: " . traffic_mb . "MB (Baseline: " . baseline_mb . "MB) | " . spike_multiplier . "x spike | " . session_count . " sessions" \
+| eval formatted_message = anomaly_type . " from " . clean_ip . " | Current: " . traffic_mb . "MB (Baseline: " . baseline_mb . "MB) | " . spike_multiplier . "x spike | " . session_count . " sessions" \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(severity) as severity, latest(current_state) as current_state \
   by device, source_ip \
@@ -779,7 +822,10 @@ search = `fortigate_index` `logids_system_reboot` earliest=rt-10m latest=rt \
     true(), "🟢 INFO") \
 | eval uptime_before = coalesce(uptime, "N/A") \
 | eval clean_reason = if(len(reboot_reason) > 50, substr(reboot_reason, 1, 47) + "...", reboot_reason) \
-| eval formatted_message = reboot_type . " " . event_type . " | Initiated by: " . initiated_by . " | Reason: " . clean_reason . " | Uptime: " . uptime_before \
+| eval formatted_message = reboot_type . " " . event_type . " | Initiated by: " . initiated_by . " | Reason: " . clean_reason . " | Uptime: " . uptime_before \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | eval alert_title = "🔄 System Reboot: " . device \
 | table _time, device, formatted_message, criticality, alert_title
 
@@ -831,7 +877,10 @@ search = `fortigate_index` `logids_license_warning` \
 | eval expiry_date = coalesce(expiry_date, "Not specified") \
 | eval action_required = if(days_remaining <= 14, "⚠️ Renew immediately", "📅 Plan renewal") \
 | eval current_state = if(days_remaining <= 30, "WARNING", "NORMAL") \
-| eval formatted_message = license_category . " expiring in " . days_remaining . " days (Expiry: " . expiry_date . ") | " . action_required \
+| eval formatted_message = license_category . " expiring in " . days_remaining . " days (Expiry: " . expiry_date . ") | " . action_required \ \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message)
 | stats latest(_time) as last_seen, latest(formatted_message) as formatted_message, \
         latest(urgency) as urgency, latest(current_state) as current_state \
   by device, license_category \
