Use official LogID filtering for FMG install exclusion
Changes:
- Added logids_fmg_install macro with LogIDs 0100044548, 0100044549, 0100044550
- Updated Config Change alert to use LogID-based filtering: NOT logids_fmg_install
- Removed complex msg/user pattern matching (redundant with LogID filter)
- More accurate and efficient filtering based on FortiGate official LogIDs
- Cleaner SPL query structure

--- a/security_alert/default/macros.conf
+++ b/security_alert/default/macros.conf
@@ -38,6 +38,11 @@ iseval = 0
 definition = (logid=0100044546 OR logid=0100044547)
 iseval = 0
 
+# Alert 001: FMG Install (Exclude from Config Change alerts)
+[logids_fmg_install]
+definition = (logid=0100044548 OR logid=0100044549 OR logid=0100044550)
+iseval = 0
+
 # Alert 002: VPN Tunnel
 [logids_vpn_tunnel]
 definition = (logid=0101037124 OR logid=0101037131 OR logid=0101037134)
