--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -12,7 +12,7 @@
 
 [001_Config_Change]
 description = Configuration change detection with detailed before/after tracking
-search = `fortigate_index` `logids_config_change` \
+search = `fortigate_index` `logids_config_change` NOT `logids_fmg_install` \
 | `enrich_with_logid_lookup` \
 | eval device = coalesce(devname, "unknown") \
 | eval user = coalesce(user, "system") \
@@ -53,18 +53,7 @@ search = `fortigate_index` `logids_config_change` \
 | eval before_value = if(clean_before != "-" AND clean_before != "[UUID]", clean_before, "N/A") \
 | eval after_value = if(clean_after != "[UUID]", clean_after, "N/A") \
 | eval is_uuid_only_change = if(before_value == "N/A" AND after_value == "N/A", 1, 0) \
-| eval is_fmg_install = if( \
-    like(lower(msg), "%fmg%install%") OR \
-    like(lower(msg), "%fortimanager%install%") OR \
-    like(lower(msg), "%install%target%") OR \
-    like(lower(msg), "%install%configuration%") OR \
-    like(lower(msg), "%config%install%") OR \
-    like(lower(user), "%fmg%") OR \
-    user="fmg_admin" OR \
-    user="FortiManager" OR \
-    user="fmgadmin", \
-    1, 0) \
-| where is_uuid_only_change = 0 AND is_fmg_install = 0 \
+| where is_uuid_only_change = 0 \
 | eval alert_title = "🔧 Config Change: " . change_type \
 | table _time, device, user, method, before_value, after_value, config_path, formatted_message, criticality, alert_title
 
