Add action type (ADD/MODIFY/DELETE) to Config Change alerts
Changes:
- Added action field to identify change type: ➕ ADD, ✏️ MODIFY, 🗑️ DELETE
- Pattern matching: added/create/new → ADD, deleted/remove/del → DELETE, modified/edit/change/set → MODIFY
- Updated alert_title to include action: 'Config Change [✏️ MODIFY]: Firewall Policy'
- Updated Slack fields: device, user, method, action, config_path, before_value, after_value, criticality
- Provides clear visibility into configuration change operations

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -19,6 +19,11 @@ search = `fortigate_index` `logids_config_change` NOT `logids_fmg_install` \
 | eval method = case(logid="0100044546", "CLI", logid="0100044547", "GUI", true(), coalesce(ui, "N/A")) \
 | eval config_path = coalesce(cfgpath, "unknown") \
 | eval config_attr = coalesce(cfgattr, "-") \
+| eval action = case( \
+    like(msg, "%added%") OR like(msg, "%create%") OR like(msg, "%new%"), "➕ ADD", \
+    like(msg, "%deleted%") OR like(msg, "%remove%") OR like(msg, "%del %"), "🗑️ DELETE", \
+    like(msg, "%modified%") OR like(msg, "%edit%") OR like(msg, "%change%") OR like(msg, "%set %") OR like(msg, "%from%to%"), "✏️ MODIFY", \
+    true(), "📝 CHANGE") \
 | eval change_type = case( \
     like(config_path, "%firewall%policy%"), "🔒 Firewall Policy", \
     like(config_path, "%firewall%address%"), "🏠 Address Object", \
@@ -54,8 +59,8 @@ search = `fortigate_index` `logids_config_change` NOT `logids_fmg_install` \
 | eval after_value = if(clean_after != "[UUID]", clean_after, "N/A") \
 | eval is_uuid_only_change = if(before_value == "N/A" AND after_value == "N/A", 1, 0) \
 | where is_uuid_only_change = 0 \
-| eval alert_title = "🔧 Config Change: " . change_type \
-| table _time, device, user, method, before_value, after_value, config_path, formatted_message, criticality, alert_title
+| eval alert_title = "🔧 Config Change [" . action . "]: " . change_type \
+| table _time, device, user, method, action, config_path, before_value, after_value, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -74,7 +79,7 @@ action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
 action.slack.param.message = $result.alert_title$
-action.slack.param.fields = device,user,method,config_path,before_value,after_value,criticality
+action.slack.param.fields = device,user,method,action,config_path,before_value,after_value,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
